tests/basic/010_fun_not.pan.out
tests/basic/010_fun_not.pan:33:1-4: error: unable to verify type of f31
tests/basic/010_fun_not.pan:36:1-4: error: unable to verify type of f32
tests/basic/010_fun_not.pan:42:1-4: error: unable to verify type of f34
tests/basic/010_fun_not.pan:67:1-4: error: unable to verify type of f51
tests/basic/010_fun_not.pan:76:1-4: error: unable to verify type of f54
tests/basic/010_fun_not.pan:87:1-4: error: unable to verify type of f62
tests/basic/010_fun_not.pan:93:1-4: error: unable to verify type of f64
tests/basic/010_fun_not.pan:101:1-4: error: unable to verify type of f71
tests/basic/010_fun_not.pan:104:1-4: error: unable to verify type of f72
tests/basic/010_fun_not.pan:110:1-4: error: unable to verify type of f74
f00 : {x:ğ”¹ | true} â†’ {y:ğ”¹ | y = Â¬x}
f10 : ğ”¹ â†’ ğ”¹
f20 : {x:ğ”¹ | true} â†’ ğ”¹
f21 : {x:ğ”¹ | x = true} â†’ ğ”¹
f22 : {x:ğ”¹ | x = false} â†’ ğ”¹
f23 : {x:ğ”¹ | true} â†’ ğ”¹
f24 : {x:ğ”¹ | false} â†’ ğ”¹
f30 : {_:ğ”¹ | true} â†’ {y:ğ”¹ | y = Â¬_}
f33 : ğ”¹ â†’ {y:ğ”¹ | true}
f40 : {x:ğ”¹ | true} â†’ {y:ğ”¹ | y = Â¬x}
f41 : {x:ğ”¹ | x = false} â†’ {y:ğ”¹ | y = true}
f42 : {x:ğ”¹ | x = true} â†’ {y:ğ”¹ | y = false}
f43 : {x:ğ”¹ | true} â†’ {y:ğ”¹ | true}
f44 : {x:ğ”¹ | false} â†’ {y:ğ”¹ | false}
f50 : {x:ğ”¹ | x = true} â†’ {y:ğ”¹ | y = Â¬x}
f52 : {x:ğ”¹ | x = true} â†’ {y:ğ”¹ | y = false}
f53 : {x:ğ”¹ | x = true} â†’ {y:ğ”¹ | true}
f60 : {x:ğ”¹ | x = false} â†’ {y:ğ”¹ | y = Â¬x}
f61 : {x:ğ”¹ | x = false} â†’ {y:ğ”¹ | y = true}
f63 : {x:ğ”¹ | x = false} â†’ {y:ğ”¹ | true}
f70 : {x:ğ”¹ | true} â†’ {y:ğ”¹ | y = Â¬x}
f73 : {x:ğ”¹ | true} â†’ {y:ğ”¹ | true}
f80 : {x:ğ”¹ | false} â†’ {y:ğ”¹ | y = Â¬x}
f81 : {x:ğ”¹ | false} â†’ {y:ğ”¹ | y = true}
f82 : {x:ğ”¹ | false} â†’ {y:ğ”¹ | y = false}
f83 : {x:ğ”¹ | false} â†’ {y:ğ”¹ | true}
f84 : {x:ğ”¹ | false} â†’ {y:ğ”¹ | false}